<resources>
    <string name="app_name">EbaySearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ebay_search">eBay Search</string>
    <string name="keyword">Keyword</string>
    <string name="price_from">Price From</string>
    <string name="price_to">Price To</string>
    <string name="sort_by">Sort By</string>
    <string-array name="sort_by_array">
        <item>Best Match</item>
        <item>Price : Highest First</item>
        <item>Price + Shipping : Highest First</item>
        <item>Price + Shipping : Lowest First</item>
    </string-array>
    <string name="best_match">Best Match</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="title_activity_result_activity">Result Activity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="top_rated">Top Rated</string>
    <string name="buy_now">Buy Now</string>
    <string name="fb_share">Share on Facebook</string>
    <string name="basic_info">BASIC INFO</string>
    <string name="seller">SELLER</string>
    <string name="shipping">SHIPPING</string>
</resources>
