<!--Layout to show main filter screen-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".EbaySearch">
    <!--Layout to show different selections-->
    <LinearLayout
        android:id="@+id/layout_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <!--Layout to show keyword option-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/keyword"/>
            <EditText
                android:id="@+id/txt_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </LinearLayout>
        <!--Layout to show "Price From" option-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/price_from"/>
            <EditText
                android:id="@+id/txt_price_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <!--Layout to show "Price To" option-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/price_to"/>
            <EditText
                android:id="@+id/txt_price_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <!--Layout to show "Sort By" option-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/sort_by"/>
            <Spinner
                android:id="@+id/spinner_sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/sort_by_array"
                android:prompt="@string/best_match"/>
        </LinearLayout>
        <!--Layout to show buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">
            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:layout_marginRight="20dp"/>
            <Button
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/lbl_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/lbl_ebay_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_filter_layout"
        android:layout_marginBottom="40dp"
        android:text="@string/ebay_search"
        android:textStyle="bold"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"/>

</RelativeLayout>
