<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.android.ebaysearch.DetailsActivity">
        <ImageView
            android:id="@+id/img_item_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="250dp"
            android:minWidth="250dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>
        <TextView
            android:id="@+id/lbl_item_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_item_detail"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/lbl_item_detail_price_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_item_detail_title"/>
        <LinearLayout
            android:id="@+id/layout_button_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_item_detail_price_shipping"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lbl_top_rated"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/top_rated"
                android:visibility="invisible"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_buy_now"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/buy_now"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:layout_gravity="center_vertical"/>
            <Button
                android:id="@+id/btn_fb_share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/fb_share"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_tab_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_button_list"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_basic_info"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/basic_info"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/holo_blue_light"/>
            <Button
                android:id="@+id/btn_seller_info"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/seller"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/darker_gray"/>
            <Button
                android:id="@+id/btn_shipping_info"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/shipping"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_basic_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_tab_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Category Name"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:id="@+id/lbl_category_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Buying Format"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:id="@+id/lbl_buying_format"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_tab_parent"
            android:visibility="gone"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_tab_parent"
            android:visibility="gone"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Shipping Type"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:id="@+id/lbl_shipping_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>